--- a/BlogContent/themes/Daily/languages/en.yml
+++ b/BlogContent/themes/Daily/languages/en.yml
@@ -1,5 +1,5 @@
-prev: Older Posts
-next: Newer Posts
+prev: Previous Post
+next: Next Post
 comment: Comments
 archive_a: Archives
 archive_b: "Archives: %s"
