--- a/BlogContent/themes/Daily/languages/zh-TW.yml
+++ b/BlogContent/themes/Daily/languages/zh-TW.yml
@@ -1,7 +1,7 @@
-prev: 上一頁
-next: 下一頁
-comment: 留言
-archive_a: 彙整
-archive_b: 彙整：%s
-contact: 與我聯系
-search: 站內搜索
+prev: Previous Post
+next: Next Post
+comment: Comments
+archive_a: Archives
+archive_b: "Archives: %s"
+contact: Contact
+search: Search
